Work: fixed text overflow

--- a/src/components/resume/Work.css
+++ b/src/components/resume/Work.css
@@ -93,6 +93,7 @@
     width: 100%;
     position: relative;
     left: 20px;
+    padding-right: 20px;
 }
 
 .work-item .item-data:lang(fa) {
